<resources>
    <string name="all_appName">Prophiles</string>

    <!-- Common actions -->
    <string name="all_settings">Settings</string>
    <string name="all_save">Save</string>
    <string name="all_edit">Edit</string>
    <string name="all_delete">Delete</string>
    <string name="all_ok">OK</string>
    <string name="all_cancel">Cancel</string>

    <!-- Common strings -->
    <string name="all_no_override">No Override</string>


    <!-- ProfileListActivity -->
    <string name="profileList_createProfileDialogTitle">Enter Profile Name</string>

    <!-- EditProfileActivity -->
    <string-array name="editProfile_pageTitles">
        <item>Actions</item>
        <item>Geofence Triggers</item>
    </string-array>

    <string name="editProfile_name">Name</string>
    <string name="editProfile_nameHint">Home, Work, etc.</string>
    <string name="editProfile_actions">Actions</string>
    <string name="editProfile_wifiState">Wi-Fi State</string>
    <string name="editProfile_bluetoothState">Bluetooth State</string>
    <string name="editProfile_locationMode">Location Mode</string>
    <string name="editProfile_ringVolume">Ring Volume</string>
    <string name="editProfile_mediaVolume">Media Volume</string>
    <string name="editProfile_alarmVolume">Alarm Volume</string>

    <string name="editProfile_rename">Rename</string>

    <string name="editProfile_permissionNotGranted">Permission Not Granted</string>
    <string name="editProfile_grantWriteSecureSettingsPermission">
        To enable this feature, execute the following command on a terminal:
        adb shell pm grant com.itude.apt.prophiles android.permission.WRITE_SECURE_SETTINGS
    </string>

    <string-array name="editProfile_enableDisableOptions">
        <item>Enable</item>
        <item>Disable</item>
        <item>No Override</item>
    </string-array>

    <string-array name="editProfile_locationModeOptions">
        <item>Off</item>
        <item>Device Only</item>
        <item>Battery Saving</item>
        <item>High Accuracy</item>
        <item>No Override</item>
    </string-array>

    <!-- QuickTileService -->
    <string name="quickTileService_defaultLabel">Select Profile</string>
</resources>
